# FluffyGC

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Main.java  Makefile  README.md  a.out  build.cmake  test.lua
a_whole_vm_for_testing/: Makefile  main.c
api/: FluffyGC.c  Makefile  common.h  gc.c  object.c
api/headers/: FluffyGC.h
api/headers/FluffyGC/: FluffyGC.h  descriptor.h  export.h  gc.h  object.h  version.h
docs/: array.rst  context.rst  descriptor.rst  fluffyheap.rst  index.rst  mods.rst  object.rst  root.rst  struct-fluffyheap.rst
docs/api/: cuteheap.rst
docs/mods/: debug.rst  dma.rst  dma_sync.rst
gc/: Kconfig  Makefile  driver.c  driver.h  gc.c  gc.h  gc_lock.h  gc_lock_posix.c  stat_collector.c  stat_collector.h
heap/: Makefile  generation.c  generation.h  heap.c  heap.h  thread.c  thread.h
include/: FluffyHeap.h
include/FluffyGC/: v1.h
include/FluffyHeap/: FluffyHeap.h
include/FluffyHeap/mods/: dma.h
include/fluffygc/: common.h  v1.h
include/mods/: debug.h  dma.h
memory/: Makefile  alloc_context.c  alloc_context.h  alloc_tracker.c  alloc_tracker.h  arena.c  arena.h  heap.h
object/: Makefile  descriptor.c  descriptor.h  helper.c  helper.h  object.c  object.h
platform/: Kconfig  Makefile  platform.h
platform/linux/: Kconfig  Makefile  platform.c  thread_id.c  thread_id.h
platform/linux/gc/: Makefile  gc_lock.c
platform/posix/: Kconfig  Makefile  README.md  platform.c
scripts/: check_linker_lib.sh  check_pkgconfig.sh  compiler_and_link_flags.cmake  process_dot_config.cmake
src/: Makefile  address_spaces.h  api.c  api.h  asan_stuff.c  asan_stuff.h  attributes.h  binary_search.c  binary_search.h  bitops.c  bitops.h  bits.h  bug.h  builder.h  byteorder.h  compiler_config.h  completion.c  completion.h  condition.c  condition.h  config.h  context.c  context.h  descriptor.c  descriptor.h  event.c  event.h  free_list_sorter.c  heap.c  heap.h  heap_local_heap.h  macros.h  main.c  main2.c  managed_heap.c  managed_heap.h  mutex.c  mutex.h  object.c  object.h  (+30 more)
src/api/: Makefile  api.c  api.h  array.c  context.c  descriptor.c  heap_api.c  hooks.c  hooks.h  object.c  pre_code.h  root.c  type_registry.c  type_registry.h
src/api/mods/: Kconfig  Kconfig.dma  Makefile  debug.c  debug.h  dma_common.c  dma_common.h  dma_native.c  mods.c  mods.h  mods_hooklist.h
src/api/mods/debug/: Kconfig.debug  Makefile  common.c  common.h  debug.c  debug.h  helper.c  helper.h
src/api/mods/debug/hooks/: Makefile  always_enable.c  arrays.c  arrays.h  dma.c  dma.h
src/api/mods/dma/: Kconfig  Makefile  dma_common.c  dma_common.h  dma_copying.c  dma_zerocopy.c
src/api_layer/: v1.c
src/collection/: hashmap.c  hashmap.h  hashmap_base.h
src/concurrency/: Makefile  completion.c  completion.h  condition.c  condition.h  event.c  event.h  mutex.c  mutex.h  rwlock.c  rwlock.h  rwulock.h  thread_local.c  thread_local.h  todo_lazy_rwlock.c  todo_lazy_rwlock.h
src/fuzzing/: Kconfig  Makefile  fuzzing.h  fuzzing_heap.c  fuzzing_root_refs.c  fuzzing_soc.c
src/fuzzing/variant/: Makefile  libFuzzer.c
src/gc/: Kconfig  Makefile  cardtable_iterator.c  cardtable_iterator.h  common.c  common.h  full_collector.c  full_collector.h  gc.c  gc.h  gc_enums.h  gc_flags.h  gc_statistic.h  marker.c  marker.h  old_collector.c  old_collector.h  parallel_heap_iterator.c  parallel_heap_iterator.h  parallel_marker.c  parallel_marker.h  young_collector.c  young_collector.h
src/gc/generic/: Makefile  generic.c  generic.h
src/gc/nop/: Makefile  nop.c  nop.h
src/gc/serial/: Makefile  serial.c  serial.h
src/hook/: Makefile  hook.c  hook.h  hook_list.h  hook_stub.c
src/itc/: Makefile  channel.c  channel.h
src/logger/: Kconfig  Makefile  logger.c  logger.h
src/memory/: Kconfig  Kconfig.heap  Kconfig.soc  Makefile  free_list_sorter.h  heap.c  heap.h  heap_common_types.h  heap_free_block_searchers.c  heap_free_block_searchers.h  heap_local_heap.h  soc.c  soc.h
src/memory/heap_malloc/: Kconfig  Makefile  heap.c  heap.h
src/memory/heap_simple/: Kconfig  Makefile  heap.c  heap.h  heap_free_block_searchers.c
src/object/: Makefile  descriptor.c  descriptor.h  object.c  object.h  object_descriptor.c  object_descriptor.h
src/object/descriptor/: Makefile  array.c  array.h  embedded.h  object.c  object.h  unmakeable.c  unmakeable.h
src/rcu/: Makefile  rcu.c  rcu.h  rcu_generic.c  rcu_generic.h  rcu_generic_type.h  rcu_vec.c  rcu_vec.h
src/stacktrace/: Kconfig  Makefile  stacktrace.c  stacktrace.h
src/stacktrace/provider/: Makefile  libbacktrace.c
src/test/: Makefile  main.c  main.h  main3.c  premain.c  premain.h  specials.c  specials.h
src/test/test_exe/: Makefile  main.c
src/todo/: README.md  btree.c  btree.h  circular_buffer.c  circular_buffer.h
src/util/: Makefile  btree.c  btree.h  circular_buffer.c  circular_buffer.h  counter.h  id_generator.c  id_generator.h  list_head.h  macro_magics.h  refcount.h  thread_pool.h  util.c  util.h
src/util/specialized/: string_to_value_map.h
suppressions/: UBSan.supp
test/: Makefile  common.c  common.h  lua.c  lua.h  main.c  stat_printer.c  stat_printer.h
test/exe/: Makefile  main.c
util/: Makefile  bitmap.c  bitmap.h  cpu_pin.c  cpu_pin.h  moving_window.c  moving_window.h
